# wordle_game_homework

./: Cargo.toml  README.md
.cargo/: config.toml
io/: Cargo.toml
io/src/: lib.rs
session_game/: Cargo.toml  build.rs
session_game/session_io/: Cargo.toml
session_game/session_io/src/: lib.rs
session_game/src/: lib.rs
src/: lib.rs
tests/: test.rs
