[package]
name = "session_io"
version = "0.1.0"
edition = "2021"

[dependencies]
gmeta = { workspace = true }
gstd = { workspace = true }
io = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.6", default-features = false }
scale-info = { version = "2.9", default-features = false, features = ["derive"] }